<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.RegistrationFragment"
    android:background="@drawable/loginbkg"
    >


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/custom_edittext"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textSize="26sp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_edittext"
                android:hint="Username"
                android:padding="5dp"
                android:textSize="18sp"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/userEmail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_edittext"
                android:hint="@string/email"
                android:padding="5dp"
                android:textSize="18sp"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_edittext"
                android:hint="Password"
                android:inputType="textPassword"
                android:padding="5dp"
                android:textSize="18sp"
                android:textColor="@color/black"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/Conform_password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:drawablePadding="8dp"
                android:background="@drawable/custom_edittext"
                android:hint="Conform Password"
                android:inputType="textPassword"
                android:padding="5dp"
                android:textSize="18sp"
                android:textColor="@color/black"
                tools:ignore="VisualLintTextFieldSize" />

            <LinearLayout
                android:background="@drawable/custom_edittext"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Select Dept: "
                    android:textSize="18dp"
                    tools:ignore="TextSizeCheck" />

                <Spinner
                    android:id="@+id/department"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/action_sign_in_short"
                    android:minHeight="48dp" />
            </LinearLayout>

            <LinearLayout
                android:background="@drawable/custom_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Select Shift : "
                    android:textSize="18dp"
                    tools:ignore="TextSizeCheck" />

                <Spinner
                    android:id="@+id/semester"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:contentDescription="@string/action_sign_in"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>

            <EditText
                android:id="@+id/session"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/custom_edittext"
                android:hint="Session"
                android:inputType="number"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:textSize="18sp"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/custom_edittext"
                android:hint="Mobile"
                android:inputType="phone"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:textSize="18sp"
                tools:ignore="VisualLintTextFieldSize" />


            <Button
                android:id="@+id/signUpBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:text="Create Account"
                android:textSize="18sp"
                app:cornerRadius="10dp"
                tools:ignore="VisualLintButtonSize" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/not_yet_registered"
            android:textAlignment="center"
            android:textSize="14sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/signInText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/signup_now"
            android:textAlignment="center"
            android:textSize="14sp"
            tools:ignore="MissingConstraints" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>